[package]
name = "mld"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
askama = "0.16.0"
chrono = { version = "0.4.45", features = ["serde"] }
csv = "1.4.0"
petgraph = { version = "0.8.3", features = ["serde-1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
